--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -35,7 +35,7 @@ gem 'paperclip'
 
 #Boostrap
 # Use SCSS for stylesheets
-gem 'bootstrap-sass', '~> 3.3.6'
+gem "bootstrap-sass", ">= 3.4.1"
 gem 'autoprefixer-rails'
 
 #Users
